<resources>
    <string name="app_name">Lab2</string>
    <string name="username">Username</string>
    <string name="username1">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="you_haven_t_an_account">You haven\'t an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo2" />
    <string name="todo1" />
    <string name="todo">\n\n</string>
    <string name="sign_up_">Sign Up</string>
    <string name="email">email</string>
    <string name="email_">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_">Log in</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Setting</string>
    <string name="profile_details">Profile Details</string>
    <string name="order_history">Order History</string>
    <string name="button">Button</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="rs_900_00">Rs.900.00</string>
    <string name="rs_1200_00">Rs.1200.00</string>
    <string name="over_coat">Over Coat</string>
    <string name="tiet_skirt">Tiet Skirt</string>
    <string name="popular_products">Popular Products</string>
    <string name="t_shirt">T shirt</string>
    <string name="pants">Pants</string>
    <string name="dresses">Dresses</string>
    <string name="accessories">Accessories</string>
    <string name="categories">Categories</string>
    <string name="search_category">search Category</string>
    <string name="himara_kavmadhi">Himara Kavmadhi</string>
    <string name="hello_welcome">Hello Welcome</string>
    <string name="rs_1000_00">Rs.1000.00</string>
    <string name="rs_2900_00">Rs.2900.00</string>
    <string name="list" />
    <string name="notification">\n</string>
    <string name="notibtn">\n\n</string>
    <string name="tshirt">\n</string>
    <string name="logo" />
    <string name="log__in">Log In</string>
</resources>