<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="800dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <ImageView
            android:layout_width="177dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="times new roman"
            android:text="@string/sign_up_"
            android:textAlignment="center"
            android:textColor="#240E9F"
            android:textSize="34sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="18dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/email_"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="18dp"

            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextViewEdits" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="361dp"
            android:layout_height="68dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="#15157A"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/todo1"
                app:srcCompat="@drawable/fb" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_weight="0"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/google" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/already_have_an_account"
                android:textColor="#FFFCFC"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_in_"
                android:textColor="#151619"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
