<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ProfileActivity"
    tools:layout_gravity="center"
    android:background="#8FD1DA">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="44dp"
                android:layout_height="41dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="times new roman"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@color/textblue"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="98dp"
            android:layout_marginStart="140dp"
            app:srcCompat="@drawable/pro" />

        <Button
            android:id="@+id/Editprofilebtn"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:backgroundTint="#4db8ff"
            android:text="Edit Profile"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="99dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/history" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/order_history"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p1"
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/p9"
                    android:layout_width="7dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/details" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profile_details"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p2"
                    android:layout_width="7dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="7dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/setting" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p3"
                    android:layout_width="21dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/secure" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p4"
                    android:layout_width="37dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/about" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p5"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/help" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/help"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p7"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="373dp"
            android:layout_height="62dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="366dp"
                android:layout_height="41dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logout" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/p"
                    android:layout_width="27dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="130dp"
            android:background="#4DB8FF"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/home" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cart"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cartq" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fav" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="65dp">

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/user2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>